# veiled

./: CHANGELOG.md  LICENSE  README.md  README.rst  example.yaml  example_encrypt.yaml  pyproject.toml
.github/workflows/: ci.yml
tests/: test_cli.py  test_veil.py
veiled/: __init__.py  cli.py
