[project]
name = "veiled"
version = "0.2.5"
description = "A very thin CLI wrapper around cryptography.fernet:Fernet"
authors = [
    { name = "Vasili Syrakis", email = "cetanu@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
keywords = ["encryption", "symmetric", "commandline"]
requires-python = ">=3.9"
dependencies = [
    "cryptography>=36.0.1",
    "typer>=0.4.0",
    "PyYAML>=6.0",
]

[project.scripts]
veil = "veiled.cli:run"

[dependency-groups]
dev = [
    "pytest>=5.2",
    "mypy>=0.920",
    "types-setuptools>=57.4.4",
    "types-PyYAML>=6.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
